Make rekonq open a new window when called, even if it's already running.

Reviewed by Andrea Diamantini.
BUG: 269065